Добавил генерацию карточек обьявлений на страницу

--- a/index.html
+++ b/index.html
@@ -229,6 +229,8 @@
   </template>
 
 <script src="js/main.js" type="module"></script>
+<!-- <script src="js/card.js"></script> -->
+
 
 </body>
 </html>
