--- a/index.html
+++ b/index.html
@@ -229,6 +229,13 @@
     </div>
   </template>
 
+    <!-- Сообщение об ошибке загрузки данных с сервера -->
+    <template id="fetch-error">
+      <div class="fetch-error">
+        <p class="fetch-error__message">Ошибка размещения объявления</p>
+      </div>
+    </template>
+
 <script src="js/main.js" type="module"></script>
 <script src="leaflet/leaflet.js"></script>
 </body>
